Generando código de productos automatico y tarea programada
